--- a/_posts/frontend/2018-07-27-webpack.md
+++ b/_posts/frontend/2018-07-27-webpack.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "垂直居中"
+title:  "webpack"
 date:   2018-04-01  +0800
-categories: frontend
+categories: frontend-框架
 tag: 知识点
 ---
 
